style.css
@font-face {
    font-family: 'aspaceregular';
    src: url(./fonts/aspace_demo-webfont.woff2)
}

:root {
    --logo-height: 100px;
    --evil-space-corp-font: 'aspaceregular';

    --widget-width: 100%;
    --widget-height: 100%;
    --widget-button-width: 40px;

    --header-text-width: 500px;
    --grey: rgb(17, 17, 17);
    --grey-dark: rgb(10, 10, 10);
    --grey-light: rgb(62, 62, 62);

    --default-font: Helvetica, sans-serif;
}

* {
    padding: 0;
    margin: 0;
    list-style: none;
    text-decoration: none;
}

a {
    color: white;
}

img {
    padding: 5px;
}

#main-grid {
    display: grid;
    grid: var(--logo-height) 1fr 2rem/ 1fr 5fr;

    background-color: black;
    width: 100vw;
    height: 100vh;
}

#dash-nav {
    grid-row: 1 / -2;
    background-color: var(--grey-dark);

    display: grid;
    grid: var(--logo-height) 1fr / 1fr;
}

#logo {
    aspect-ratio: 1;
    height: var(--logo-height);
    justify-self: center;
}

nav {
    padding: 20px;
    font-size: 1.5rem;
    text-align: center;
}

#dash-main {

    grid-area: 2 / 2 / -2 / -1;
    background-color: var(--grey-light);

    display: grid;
    grid: 1fr / 4fr 1fr;
}

header {
    grid-area: 1 / 2 / 2 / -1;
    width: 100%;
    height: var(--logo-height);
    background-color: var(--grey);

    display: grid;
    grid: 1fr / var(--header-text-width) 1fr;
    justify-items: center;
    align-items: center;

    font-size: 1.5rem;
    font-family: var(--evil-space-corp-font);
    color: white;
    text-decoration: underline silver;
}

header h1 {
    font-size: 2rem;
    width: var(--header-text-width);
    text-align: center;
}

footer {
    background-color: aqua;
    grid-row: 3;
    grid-column: 1 / -1;
    background-color: rgb(17, 17, 17);
    text-align: center;
}

/* ///////////////////////////////////////// */

#widget-panel {
    grid-area: 1 / 1 / -1 / 2;

    display: grid;
    grid: repeat(3, 1fr) / repeat(3, 1fr);
    gap: 10px;

    grid-template-areas:
        "earnings stats kpi"
        "allies ... ...";

    margin: 18px;
}

.widget {
    font-family: var(--default-font);

    display: flex;
    flex-direction: column;
    justify-content: space-between;

    padding: 25px;
    box-sizing: border-box;

    width: var(--widget-width);
    height: var(--widget-height);
    background-color: rgb(255, 255, 255);
    border-radius: 15px;
    place-self: center;

}

.earnings {
    grid-area: earnings;
}

.stats {
    grid-area: stats;
}

.kpi {
    grid-area: kpi;
}

.allies {
    grid-area: allies;
}

.widget>h2 {
    letter-spacing: -1px;
    font-size: 33.69px;
    margin-bottom: -30px;
}

.widget-buttons {
    display: flex;
    justify-content: end;
    align-items: end;
    gap: 10px;
}

.widget-button {
    width: var(--widget-button-width);
    aspect-ratio: 1;
    border-radius: 7px;
}

.widget-button:nth-child(1) {
    width: calc(var(--widget-button-width) * 2);
    aspect-ratio: 2/1;
}

#updates-panel>* {
    font-family: var(--default-font);
}

#updates-panel {
    grid-area: 1 / 2 / -1 / -1;
    display: flex;
    background-color: var(--grey-light);
    border-left: rgb(217, 198, 198) 2px solid;
    width: 15rem%;
    flex-direction: column;
    gap: 10px;
    align-items: center;
}

#updates-panel>h2 {
    color: aqua;
    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
    box-sizing: border-box;
    padding: 20px;
}

.update-content-widget {
    width: 80%;
    height: calc(80%*2);
    background-color: aqua;
    border-radius: 7px;
}

.update-header {
    font-size: 18px;
    padding: 10px;
    text-align: center;
}

.update-content-widget p {
    text-align: center;
    padding: 5px;
}

.nav-link {
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    padding: 1rem;
}

.nav-link>a:hover {
    opacity: .7;
}


.current-page {
    color: rgba(255, 255, 255, 0.467);
}

